unpackaged/main/default/objects/CustomerRequest__c/CustomerRequest__c.object-meta.xml
<CustomObject>
    <label>Customer Request</label>
    <nameField>
        <displayFormat>{YYYY}-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>