unpackaged/main/default/objects/CustomerRequest__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Lorem Ipsum</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Requests</relationshipLabel>
    <relationshipName>CustomerRequests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>