unpackaged/main/default/objects/CustomerRequest__c/fields/ApprovedDateAgencyManager__c.field-meta.xml
<CustomField>
    <fullName>ApprovedDateAgencyManager__c</fullName>
    <label>Approved Date by Agency Manager</label>
    <type>Date</type>
</CustomField>