unpackaged/main/default/objects/CustomerRequest__c/fields/ApprovedDateBuAssistantManager__c.field-meta.xml
<CustomField>
    <fullName>ApprovedDateBuAssistantManager__c</fullName>
    <label>Approved Date by BU Assistant Manager</label>
    <type>Date</type>
</CustomField>