unpackaged/main/default/objects/CustomerRequest__c/fields/ApprovedDateBuManager__c.field-meta.xml
<CustomField>
    <fullName>ApprovedDateBuManager__c</fullName>
    <label>Approved Date by BU Manager</label>
    <type>Date</type>
</CustomField>