unpackaged/main/default/objects/CustomerRequest__c/fields/ApprovedDateBuManagerPs__c.field-meta.xml
<CustomField>
    <fullName>ApprovedDateBuManagerPs__c</fullName>
    <label>Approved Date by BU Manager PS</label>
    <type>Date</type>
</CustomField>