unpackaged/main/default/objects/CustomerRequest__c/fields/ApprovedDateCfo__c.field-meta.xml
<CustomField>
    <fullName>ApprovedDateCfo__c</fullName>
    <label>Approved Date by CFO</label>
    <type>Date</type>
</CustomField>