unpackaged/main/default/objects/CustomerRequest__c/fields/ApprovedDateSalesManager__c.field-meta.xml
<CustomField>
    <fullName>ApprovedDateSalesManager__c</fullName>
    <label>Approved Date by Sales Manager</label>
    <type>Date</type>
</CustomField>