unpackaged/main/default/objects/CustomerRequest__c/fields/ApprovedDateSalesPlanner__c.field-meta.xml
<CustomField>
    <fullName>ApprovedDateSalesPlanner__c</fullName>
    <label>Approved Date by Sales Planner</label>
    <type>Date</type>
</CustomField>