unpackaged/main/default/objects/CustomerRequest__c/fields/ApprovedDateSrcManager__c.field-meta.xml
<CustomField>
    <fullName>ApprovedDateSrcManager__c</fullName>
    <label>Approved Date SRC Manager</label>
    <type>Date</type>
</CustomField>