unpackaged/main/default/objects/CustomerRequest__c/fields/BU_AssistantManager__c.field-meta.xml
<CustomField>
    <fullName>BU_AssistantManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BU Assistant Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomerRequestsBU_AssistantManager</relationshipName>
    <type>Lookup</type>
</CustomField>