unpackaged/main/default/objects/CustomerRequest__c/fields/BU_Manager__c.field-meta.xml
<CustomField>
    <fullName>BU_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BU Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomerRequestsBU_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>