unpackaged/main/default/objects/CustomerRequest__c/fields/BU_ManagerPS__c.field-meta.xml
<CustomField>
    <fullName>BU_ManagerPS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BU Manager PS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomerRequestsBU_ManagerPS</relationshipName>
    <type>Lookup</type>
</CustomField>