unpackaged/main/default/objects/CustomerRequest__c/fields/BusinessUnit2__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>BU of the Product concerned by the request</inlineHelpText>
    <label>Business Unit 2</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Customer Requests (Business Unit 2)</relationshipLabel>
    <relationshipName>Customer_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>