unpackaged/main/default/objects/CustomerRequest__c/fields/BusinessUnit3__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>BU of the Product concerned by the request</inlineHelpText>
    <label>Business Unit 3</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Customer Requests (Business Unit 3)</relationshipLabel>
    <relationshipName>Customer_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>