unpackaged/main/default/objects/CustomerRequest__c/fields/BusinessUnit4__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>BU of the Product concerned by the request</inlineHelpText>
    <label>Business Unit 4</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Customer Requests (Business Unit 4)</relationshipLabel>
    <relationshipName>Customer_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>