unpackaged/main/default/objects/CustomerRequest__c/fields/CancellationDate__c.field-meta.xml
<CustomField>
    <fullName>CancellationDate__c</fullName>
    <description>Used for the manual customer request creation</description>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>