unpackaged/main/default/objects/CustomerRequest__c/fields/CancellationReason1__c.field-meta.xml
<CustomField>
    <fullName>CancellationReason1__c</fullName>
    <label>Cancellation Reason 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CancellationReason1</valueSetName>
    </valueSet>
</CustomField>