unpackaged/main/default/objects/CustomerRequest__c/fields/CancellationReason2__c.field-meta.xml
<CustomField>
    <fullName>CancellationReason2__c</fullName>
    <inlineHelpText>Lorem ipsum dolor sit amet</inlineHelpText>
    <label>Cancellation Reason 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CancellationReason1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CancellationReason2</valueSetName>
    </valueSet>
</CustomField>