unpackaged/main/default/objects/CustomerRequest__c/fields/CreditNoteAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteAmount__c</fullName>
    <label>Credit Note Amount</label>
    <summarizedField>InvoiceLine__c.CreditNoteAmount__c</summarizedField>
    <summaryForeignKey>InvoiceLine__c.CustomerRequest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>