unpackaged/main/default/objects/CustomerRequest__c/fields/CreditNoteAmountManual__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteAmountManual__c</fullName>
    <description>Used for the manual creation of a customer request type credit note</description>
    <label>Credit Note Amount Manual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>