unpackaged/main/default/objects/CustomerRequest__c/fields/CreditNoteReason1__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteReason1__c</fullName>
    <label>Credit Note Reason 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CreditNoteReason1</valueSetName>
    </valueSet>
</CustomField>