unpackaged/main/default/objects/CustomerRequest__c/fields/CreditNoteReason2__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteReason2__c</fullName>
    <label>Credit Note Reason 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CreditNoteReason1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CreditNoteReason2</valueSetName>
    </valueSet>
</CustomField>