unpackaged/main/default/objects/CustomerRequest__c/fields/CreditNoteReason3__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteReason3__c</fullName>
    <label>Credit Note Reason 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CreditNoteReason2__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CreditNoteReason3</valueSetName>
    </valueSet>
</CustomField>