unpackaged/main/default/objects/CustomerRequest__c/fields/CurrentApprover__c.field-meta.xml
<CustomField>
    <fullName>CurrentApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomerRequests</relationshipName>
    <type>Lookup</type>
</CustomField>