unpackaged/main/default/objects/CustomerRequest__c/fields/CustomerRequestNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerRequestNumber__c</fullName>
    <formula>IF(
    TEXT(Type__c) = "Credit Note",
    "DA-" + Name,
    "DR-" + Name
)</formula>
    <label>Customer Request Number</label>
    <type>Text</type>
</CustomField>