unpackaged/main/default/objects/CustomerRequest__c/fields/ElapsedTimeApproval__c.field-meta.xml
<CustomField>
    <fullName>ElapsedTimeApproval__c</fullName>
    <label>Elapsed Time in Approval</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>