unpackaged/main/default/objects/CustomerRequest__c/fields/ElapsedTimeFinalization__c.field-meta.xml
<CustomField>
    <fullName>ElapsedTimeFinalization__c</fullName>
    <label>Elapsed Time in Finalization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>