unpackaged/main/default/objects/CustomerRequest__c/fields/ErpNumber__c.field-meta.xml
<CustomField>
    <fullName>ErpNumber__c</fullName>
    <formula>Account__r.ERP_Number__c</formula>
    <label>Erp Number</label>
    <type>Text</type>
</CustomField>