unpackaged/main/default/objects/CustomerRequest__c/fields/FinalAmount__c.field-meta.xml
<CustomField>
    <fullName>FinalAmount__c</fullName>
    <description>Formula calculate the amount of credit note or cancellation and use in approval process</description>
    <formula>IF(TEXT(Type__c) = 'Credit Note',
CreditNoteAmount__c + CreditNoteAmountManual__c,
MRR_Cancelled__c + MRRCancelledManual__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>