unpackaged/main/default/objects/CustomerRequest__c/fields/FinalApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>FinalApprovalDate__c</fullName>
    <label>Final Approval Date</label>
    <type>Date</type>
</CustomField>