unpackaged/main/default/objects/CustomerRequest__c/fields/FinalizedProcessDate__c.field-meta.xml
<CustomField>
    <fullName>FinalizedProcessDate__c</fullName>
    <label>Finalized Process Date</label>
    <type>Date</type>
</CustomField>