unpackaged/main/default/objects/CustomerRequest__c/fields/GenerateCancellation__c.field-meta.xml
<CustomField>
    <fullName>GenerateCancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Cancellation</label>
    <type>Checkbox</type>
</CustomField>