unpackaged/main/default/objects/CustomerRequest__c/fields/IsADVRelated__c.field-meta.xml
<CustomField>
    <fullName>IsADVRelated__c</fullName>
    <formula>IF(
    AND(
        OR(
            $User.Id=Owner:User.Id,
            $User.Id=LEFT(tech_CurrentApproverId__c,15)
        ),
        OR(
            $User.Id=SalesPlanner__c,
            $User.Id=SalesManager__c
        )
    ),
    true,
    false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is ADV Related?</label>
    <type>Checkbox</type>
</CustomField>