unpackaged/main/default/objects/CustomerRequest__c/fields/IsApproverCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>IsApproverCurrentUser__c</fullName>
    <formula>IF(CASESAFEID($User.Id)=tech_CurrentApproverId__c,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Approver Current User?</label>
    <type>Checkbox</type>
</CustomField>