unpackaged/main/default/objects/CustomerRequest__c/fields/IsOwner__c.field-meta.xml
<CustomField>
    <fullName>IsOwner__c</fullName>
    <formula>IF($User.Id =  CreatedById , True,False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOwner</label>
    <type>Checkbox</type>
</CustomField>