unpackaged/main/default/objects/CustomerRequest__c/fields/MRR_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>MRR_Cancelled__c</fullName>
    <label>MRR Cancelled</label>
    <summarizedField>SubscriptionLine__c.MRR_Cancelled__c</summarizedField>
    <summaryForeignKey>SubscriptionLine__c.CustomerRequest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>