unpackaged/main/default/objects/CustomerRequest__c/fields/MRRCancelledManual__c.field-meta.xml
<CustomField>
    <fullName>MRRCancelledManual__c</fullName>
    <description>Used for the manual creation of a customer request type cancellation</description>
    <label>MRR Cancelled Manual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>