unpackaged/main/default/objects/CustomerRequest__c/fields/PoNumber__c.field-meta.xml
<CustomField>
    <fullName>PoNumber__c</fullName>
    <label>PO Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>