unpackaged/main/default/objects/CustomerRequest__c/fields/SalesManager__c.field-meta.xml
<CustomField>
    <fullName>SalesManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomerRequestsSalesManager</relationshipName>
    <type>Lookup</type>
</CustomField>