unpackaged/main/default/objects/CustomerRequest__c/fields/SalesPlanner__c.field-meta.xml
<CustomField>
    <fullName>SalesPlanner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Planner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomerRequestsSalesPlanner</relationshipName>
    <type>Lookup</type>
</CustomField>