unpackaged/main/default/objects/CustomerRequest__c/fields/SendCreditNoteToCustomer__c.field-meta.xml
<CustomField>
    <fullName>SendCreditNoteToCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Credit Note to Customer</label>
    <type>Checkbox</type>
</CustomField>