unpackaged/main/default/objects/CustomerRequest__c/fields/SnTicketNumber__c.field-meta.xml
<CustomField>
    <fullName>SnTicketNumber__c</fullName>
    <externalId>true</externalId>
    <label>SN Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>