unpackaged/main/default/objects/CustomerRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Validate Adv in progress</fullName>
                <label>Validate - Adv in progress</label>
            </value>
            <value>
                <fullName>Finished treatment</fullName>
            </value>
            <value>
                <fullName>Non compliant</fullName>
                <isActive>false</isActive>
                <label>Non compliant</label>
            </value>
            <value>
                <fullName>To complete</fullName>
                <isActive>false</isActive>
                <label>To complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>