unpackaged/main/default/objects/CustomerRequest__c/fields/tech_ApprovalCount__c.field-meta.xml
<CustomField>
    <fullName>tech_ApprovalCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>tech_ApprovalCount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>