unpackaged/main/default/objects/CustomerRequest__c/fields/tech_BusinessUnit4Name__c.field-meta.xml
<CustomField>
    <fullName>tech_BusinessUnit4Name__c</fullName>
    <formula>BusinessUnit4__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_BusinessUnit4Name</label>
    <type>Text</type>
</CustomField>