unpackaged/main/default/objects/CustomerRequest__c/fields/tech_CurrentApproverId__c.field-meta.xml
<CustomField>
    <fullName>tech_CurrentApproverId__c</fullName>
    <label>tech_CurrentApproverId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>