unpackaged/main/default/objects/CustomerRequest__c/fields/tech_CustomerRequestUrl__c.field-meta.xml
<CustomField>
    <fullName>tech_CustomerRequestUrl__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Enterprise_Server_URL_510, FIND( '/services', $Api.Enterprise_Server_URL_510)) + "lightning/r/CustomerRequest__c/" + CASESAFEID(Id) + "/view", "Cliquez ICI")</formula>
    <label>tech_CustomerRequestUrl</label>
    <type>Text</type>
</CustomField>