unpackaged/main/default/objects/CustomerRequest__c/fields/tech_DeleteRequest__c.field-meta.xml
<CustomField>
    <fullName>tech_DeleteRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete this request</label>
    <type>Checkbox</type>
</CustomField>