unpackaged/main/default/objects/CustomerRequest__c/fields/tech_EligibleForAutomation__c.field-meta.xml
<CustomField>
    <fullName>tech_EligibleForAutomation__c</fullName>
    <formula>AND
(
    tech_IsCreditNoteApprovalShort__c = true,
    CreditNoteAmount__c &lt; 10000
)</formula>
    <label>tech_EligibleForAutomation</label>
    <type>Checkbox</type>
</CustomField>