unpackaged/main/default/objects/CustomerRequest__c/fields/tech_IsApproved__c.field-meta.xml
<CustomField>
    <fullName>tech_IsApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>tech field to flag that the record has been approved and used in validation rules</description>
    <label>tech_IsApproved</label>
    <type>Checkbox</type>
</CustomField>