unpackaged/main/default/objects/CustomerRequest__c/fields/tech_IsCancellatiApprovalStandardMultiBU__c.field-meta.xml
<CustomField>
    <fullName>tech_IsCancellatiApprovalStandardMultiBU__c</fullName>
    <formula>IF
(
    (ISPICKVAL(Type__c, "Cancellation") || ISPICKVAL(Type__c, "Cancellation with Credit Note")) &amp;&amp;
    tech_IsCancellationApprovalShort_MultiBU__c = False &amp;&amp; tech_IsMultiBu__c = True,
    True,
    False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_IsCancellatiApprovalStandardMultiBU</label>
    <type>Checkbox</type>
</CustomField>