unpackaged/main/default/objects/CustomerRequest__c/fields/tech_IsCancellationApprovalShort_MultiBU__c.field-meta.xml
<CustomField>
    <fullName>tech_IsCancellationApprovalShort_MultiBU__c</fullName>
    <formula>IF
(
    tech_BusinessUnitName__c &lt;&gt; "RETAIL" &amp;&amp;
    tech_BusinessUnit2Name__c &lt;&gt; "RETAIL" &amp;&amp;
    tech_BusinessUnit3Name__c &lt;&gt; "RETAIL" &amp;&amp;
    tech_BusinessUnit4Name__c &lt;&gt; "RETAIL" &amp;&amp;
    tech_BusinessUnit5Name__c &lt;&gt; "RETAIL" &amp;&amp;
    (ISPICKVAL(Type__c, "Cancellation") || ISPICKVAL(Type__c, "Cancellation with Credit Note")) &amp;&amp;
    (ISPICKVAL(CancellationReason1__c, "06") ||
    ISPICKVAL(CancellationReason2__c, "A00") ||
    ISPICKVAL(CancellationReason2__c, "B09") ||
    ISPICKVAL(CancellationReason2__c, "D04") ||
    ISPICKVAL(CancellationReason2__c, "D02") ||
    ISPICKVAL(CancellationReason2__c,"E01") ||
    ISPICKVAL(CancellationReason2__c,"E02")),
    True,
    False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_IsCancellationApprovalShort_MultiBU</label>
    <type>Checkbox</type>
</CustomField>