unpackaged/main/default/objects/CustomerRequest__c/fields/tech_IsCancellationApprovalStandard__c.field-meta.xml
<CustomField>
    <fullName>tech_IsCancellationApprovalStandard__c</fullName>
    <formula>IF
(
    (ISPICKVAL(Type__c, "Cancellation") || ISPICKVAL(Type__c, "Cancellation with Credit Note")) &amp;&amp;
    tech_IsCancellationApprovalShort__c = False &amp;&amp;
    tech_IsMultiBu__c = False,
    True,
    False
)</formula>
    <label>tech_IsCancellationApprovalStandard</label>
    <type>Checkbox</type>
</CustomField>