unpackaged/main/default/objects/CustomerRequest__c/fields/tech_IsCreditNoteApprovalShort_MultiBU__c.field-meta.xml
<CustomField>
    <fullName>tech_IsCreditNoteApprovalShort_MultiBU__c</fullName>
    <formula>IF
(
tech_BusinessUnitName__c &lt;&gt; "RETAIL" &amp;&amp;
tech_BusinessUnit2Name__c &lt;&gt; "RETAIL" &amp;&amp;
tech_BusinessUnit3Name__c &lt;&gt; "RETAIL" &amp;&amp;
tech_BusinessUnit4Name__c &lt;&gt; "RETAIL" &amp;&amp;
tech_BusinessUnit5Name__c &lt;&gt; "RETAIL" &amp;&amp;
ISPICKVAL(Type__c, "Credit Note") &amp;&amp;
(ISPICKVAL(CreditNoteReason2__c, "C02") ||
ISPICKVAL(CreditNoteReason2__c, "A02") ||
ISPICKVAL(CreditNoteReason2__c, "A01") ||
ISPICKVAL(CreditNoteReason2__c, "A06") ||
ISPICKVAL(CreditNoteReason2__c, "A07") ||
ISPICKVAL(CreditNoteReason3__c,"030") ||
ISPICKVAL(CreditNoteReason3__c,"043")||
ISPICKVAL(CreditNoteReason3__c,"052")||
(ISPICKVAL(CreditNoteReason2__c, "A04") &amp;&amp; ISPICKVAL(CreditNoteReason3__c,"031"))
),
True,
False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_IsCreditNoteApprovalShort_MultiBU</label>
    <type>Checkbox</type>
</CustomField>