unpackaged/main/default/objects/CustomerRequest__c/fields/tech_IsCreditNoteApprovalStandard__c.field-meta.xml
<CustomField>
    <fullName>tech_IsCreditNoteApprovalStandard__c</fullName>
    <formula>IF
(
    ISPICKVAL(Type__c,"Credit Note") &amp;&amp; 
    tech_IsCreditNoteApprovalShort__c = False &amp;&amp;
    tech_IsMultiBu__c = False,
    True,
    False
)</formula>
    <label>tech_IsCreditNoteApprovalStandard</label>
    <type>Checkbox</type>
</CustomField>