unpackaged/main/default/objects/CustomerRequest__c/fields/tech_IsCreditNoteApprovalStandardMultiBU__c.field-meta.xml
<CustomField>
    <fullName>tech_IsCreditNoteApprovalStandardMultiBU__c</fullName>
    <formula>IF
(
ISPICKVAL(Type__c,"Credit Note") &amp;&amp;
tech_IsCreditNoteApprovalShort_MultiBU__c = False &amp;&amp; 
tech_IsMultiBu__c = True,
True,
False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_IsCreditNoteApprovalStandardMultiBU</label>
    <type>Checkbox</type>
</CustomField>