unpackaged/main/default/objects/CustomerRequest__c/fields/tech_IsFirstEuro__c.field-meta.xml
<CustomField>
    <fullName>tech_IsFirstEuro__c</fullName>
    <formula>OR(
TEXT(CreditNoteReason2__c) = "C02",
TEXT(CreditNoteReason2__c) = "A02",
TEXT(CreditNoteReason2__c) = "A07",
TEXT(CreditNoteReason3__c) = "230",
TEXT(CreditNoteReason3__c) = "170",
TEXT(CreditNoteReason3__c) = "043",
TEXT(CreditNoteReason3__c) = "041",
TEXT(CreditNoteReason3__c) = "052",
AND(TEXT(CreditNoteReason2__c) = "A04",TEXT(CreditNoteReason3__c) = "031")
)</formula>
    <label>tech_IsFirstEuro</label>
    <type>Checkbox</type>
</CustomField>