unpackaged/main/default/objects/CustomerRequest__c/fields/tech_IsLessFiftyNotSubmittable__c.field-meta.xml
<CustomField>
    <fullName>tech_IsLessFiftyNotSubmittable__c</fullName>
    <formula>OR(TEXT(Type__c) = "Credit Note" , TEXT(Type__c) = "Cancellation with Credit Note") &amp;&amp; FinalAmount__c &lt; 50 &amp;&amp; NOT(tech_IsFirstEuro__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_IsLessFiftyNotSubmittable</label>
    <type>Checkbox</type>
</CustomField>