unpackaged/main/default/objects/CustomerRequest__c/fields/tech_IsMultiBu__c.field-meta.xml
<CustomField>
    <fullName>tech_IsMultiBu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tech_IsMultiBu</label>
    <type>Checkbox</type>
</CustomField>