unpackaged/main/default/objects/CustomerRequest__c/fields/tech_IsRejected__c.field-meta.xml
<CustomField>
    <fullName>tech_IsRejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>tech field to flag that the record has been rejected and used in validation rules</description>
    <label>tech_IsRejected</label>
    <type>Checkbox</type>
</CustomField>