unpackaged/main/default/objects/CustomerRequest__c/fields/tech_IsSubmitted__c.field-meta.xml
<CustomField>
    <fullName>tech_IsSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>tech field to flag that the record has been submitted for approval and used in validation rules</description>
    <label>tech_IsSubmitted</label>
    <type>Checkbox</type>
</CustomField>