unpackaged/main/default/objects/CustomerRequest__c/fields/tech_ManualCreation__c.field-meta.xml
<CustomField>
    <fullName>tech_ManualCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tech_ManualCreation</label>
    <type>Checkbox</type>
</CustomField>