unpackaged/main/default/objects/CustomerRequest__c/fields/tech_MultiBU_AgencyApprouved__c.field-meta.xml
<CustomField>
    <fullName>tech_MultiBU_AgencyApprouved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tech_MultiBU_AgencyApprouved</label>
    <type>Checkbox</type>
</CustomField>