unpackaged/main/default/objects/CustomerRequest__c/fields/tech_MultiBUCounter__c.field-meta.xml
<CustomField>
    <fullName>tech_MultiBUCounter__c</fullName>
    <label>tech_MultiBUCounter</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>