unpackaged/main/default/objects/CustomerRequest__c/fields/tech_MultiBUCounterPS__c.field-meta.xml
<CustomField>
    <fullName>tech_MultiBUCounterPS__c</fullName>
    <label>tech_MultiBUCounterPS</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>