unpackaged/main/default/objects/CustomerRequest__c/fields/tech_MultiBUVolume__c.field-meta.xml
<CustomField>
    <fullName>tech_MultiBUVolume__c</fullName>
    <label>tech_MultiBUVolume</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>