unpackaged/main/default/objects/CustomerRequest__c/fields/tech_ReEvaluateBU__c.field-meta.xml
<CustomField>
    <fullName>tech_ReEvaluateBU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tech_ReEvaluateBU</label>
    <type>Checkbox</type>
</CustomField>