unpackaged/main/default/objects/CustomerRequest__c/fields/tech_ReEvaluateBUPS__c.field-meta.xml
<CustomField>
    <fullName>tech_ReEvaluateBUPS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tech_ReEvaluateBUPS</label>
    <type>Checkbox</type>
</CustomField>