unpackaged/main/default/objects/CustomerRequest__c/fields/tech_ReminderDate__c.field-meta.xml
<CustomField>
    <fullName>tech_ReminderDate__c</fullName>
    <formula>CASE
( 
    MOD(SubmittedDate__c - DATE( 1900, 1, 7), 7),
    0, SubmittedDate__c + 5,
    6, SubmittedDate__c + 1 + 5,
    SubmittedDate__c + 2 + 5
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_ReminderDate</label>
    <type>Date</type>
</CustomField>