unpackaged/main/default/objects/CustomerRequest__c/fields/temp_comment__c.field-meta.xml
<CustomField>
    <fullName>temp_comment__c</fullName>
    <label>temp_comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>