unpackaged/main/default/objects/CustomerRequest__c/fields/TotalPartial__c.field-meta.xml
<CustomField>
    <fullName>TotalPartial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the customer request is total (check) or partial (uncheck)</description>
    <inlineHelpText>Total (check) / Partial (uncheck)</inlineHelpText>
    <label>Total / Partial</label>
    <type>Checkbox</type>
</CustomField>