unpackaged/main/default/objects/CustomerRequest__c/validationRules/VR_CustomerReq02_RejectedLockStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CustomerReq02_RejectedLockStatus</fullName>
    <active>true</active>
    <description>A request that has been rejected can't be modified anymore</description>
    <errorConditionFormula>AND (
				NOT($User.BypassVR__c),
				NOT(INCLUDES( $User.List_of_VR_to_By_Pass__c, "VR_CustomerReq02_RejectedLockStatus")),
				PRIORVALUE(tech_IsRejected__c) &amp;&amp; tech_IsRejected__c
)</errorConditionFormula>
    <errorMessage>You can't change the status of a customer request that has been rejected.</errorMessage>
</ValidationRule>